# SpaceCadetPinball

./: .gitmodules  README.md  settings.gradle
.fastlane/metadata/android/en-US/: short_description.txt
.fastlane/metadata/android/en-US/changelogs/: 4.txt
.github/workflows/: android.yml  build.yml
SpaceCadetPinball/: EmbeddedData.h  GroupData.cpp  NatvisFile.natvis  Sound.cpp  TBall.cpp  TBall.h  TEdgeSegment.cpp  TFlipperEdge.cpp  TFlipperEdge.h  TKickout.cpp  TLine.cpp  TPinballTable.cpp  TPlunger.cpp  TRamp.cpp  TTableLayer.cpp  TTextBox.cpp  TTextBox.h  TTextBoxMessage.cpp  TTextBoxMessage.h  control.cpp  control.h  high_score.cpp  loader.cpp  maths.cpp  maths.h  midi.cpp  midi.h  options.cpp  options.h  pb.cpp  pb.h  pch.h  pinball.cpp  pinball.h  render.cpp  score.cpp  winmain.cpp  winmain.h
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/dualscreenstudios/spacecadetpinball/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: PINBALL.MID  wavemix.inf
app/src/main/cpp/: CMakeLists.txt  SpaceCadetPinballJNI.cpp  SpaceCadetPinballJNI.h  android_utils.cpp  android_utils.h
app/src/main/cpp/SpaceCadetPinball/: EmbeddedData.cpp  EmbeddedData.h  GroupData.cpp  GroupData.h  Sound.cpp  Sound.h  SpaceCadetPinball.cpp  TBall.cpp  TBall.h  TBlocker.cpp  TBlocker.h  TBumper.cpp  TBumper.h  TCircle.cpp  TCircle.h  TCollisionComponent.cpp  TCollisionComponent.h  TComponentGroup.cpp  TComponentGroup.h  TDemo.cpp  TDemo.h  TDrain.cpp  TDrain.h  TEdgeBox.h  TEdgeManager.cpp  TEdgeManager.h  TEdgeSegment.cpp  TEdgeSegment.h  TFlagSpinner.cpp  TFlagSpinner.h  TFlipper.cpp  TFlipper.h  TFlipperEdge.cpp  TFlipperEdge.h  TGate.cpp  TGate.h  THole.cpp  THole.h  TKickback.cpp  TKickback.h  (+81 more)
app/src/main/java/com/dualscreenstudios/spacecadetpinball/: MainActivity.java
app/src/main/java/com/fexed/spacecadetpinball/: GameState.java  HighScoreHandler.java  JNIEntryPoint.java  LeaderboardActivity.java  LeaderboardAdapter.java  LeaderboardElement.java  MainActivity.java  Settings.java  StateHelper.java
app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLAudioManager.java  SDLControllerManager.java  SDLInputConnection.java  SDLSurface.java
app/src/main/res/drawable/: border.xml  thumb.xml
app/src/main/res/layout/: activity_leaderboard.xml  activity_main.xml  activity_settings.xml  leaderboard_element.xml
app/src/main/res/raw/: gametexts.txt  res_creator.py
app/src/main/res/values/: gametexts.xml  strings.xml  themes.xml
app/src/main/res/values-it/: gametexts.xml  strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-ru/: gametexts.xml  strings.xml
app/src/test/java/com/dualscreenstudios/spacecadetpinball/: ExampleUnitTest.java
fastlane/metadata/android/en-US/: full_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 5.txt  6.txt  7.txt
gradle/wrapper/: gradle-wrapper.properties
